[package]
name = "userspace-rng"
version = "1.0.3"
edition = "2021"
description = "provides secure randomness with entropy generated in userspace"
license = "MIT"
repository = "https://github.com/DavidVorick/userspace-rng"

[dependencies]
anyhow = "1.0"
getrandom = { version = "0.4", features = ["std", "sys_rng"] }
rand_core = "0.10.0"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.8.2"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core = "0.10.0"

[[bench]]
name = "rng_speed"
harness = false
